atualização de nomes

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/cifrao.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consórcio XYZ</title>
+    <title>Almeida Consórcios</title>
     <link rel="stylesheet" href="consorcio.css">
 </head>
 <body>
     <header>
-        <h1>Consórcio XYZ</h1>
+        <h1>Almeida Consórcios</h1>
         <nav>
             <ul>
                 <li><a href="#como-funciona">Como Funciona</a></li>
@@ -19,19 +20,19 @@
     </header>
 
     <section id="banner">
-        <h2>Realize seus sonhos com o Consórcio XYZ</h2>
+        <h2>Realize seus sonhos com a Almeida Consórcios</h2>
         <p>Adquira seu veículo, imóvel ou serviço desejado de forma planejada e sem juros.</p>
         <a href="#contato" class="cta">Saiba mais</a>
     </section>
 
     <section id="como-funciona">
         <h2>Como Funciona</h2>
-        <p>O consórcio XYZ oferece uma forma inteligente e econômica de adquirir bens e serviços. Veja como é simples:</p>
+        <p>A Almeida Consórcios oferece uma forma inteligente e econômica de adquirir bens e serviços. Veja como é simples:</p>
         <ul>
             <li>Escolha o valor e o plano desejado;</li>
             <li>Pague parcelas mensais sem juros;</li>
             <li>Concorra aos sorteios mensais e tenha a chance de ser contemplado;</li>
-            <li>Ou ofereça um lance para antecipar a contemplação.</li>
+            <li>Oferecemos lances para você ter mais chances de ser contemplado.</li>
         </ul>
     </section>
 
@@ -41,21 +42,17 @@
             <li>Planos flexíveis e personalizados;</li>
             <li>Possibilidade de contemplação por sorteio ou lance;</li>
             <li>Isenção de taxa de adesão e taxa de juros;</li>
-            <li>Compra planejada e sem entrada;</li>
+            <li>Compra planejada por profissionais da área;</li>
             <li>Assistência e suporte durante todo o processo.</li>
         </ul>
     </section>
 
     <section id="contato">
         <h2>Entre em Contato</h2>
-        <p>Preencha o formulário abaixo e entraremos em contato para tirar suas dúvidas e apresentar as melhores opções para você.</p>
-        <form action="#" method="post">
-            <input type="text" name="nome" placeholder="Nome" required>
-            <input type="email" name="email" placeholder="E-mail" required>
-            <input type="tel" name="telefone" placeholder="Telefone" required>
-            <textarea name="mensagem" placeholder="Mensagem"></textarea>
-            <button type="submit">Enviar</button>
-        </form>
+       
+        <p>(81) 9 8738-7614 (whatsapp)
+            
+        </p>
     </section>
 
     <footer>
